--- a/ui/src/styles/index.scss
+++ b/ui/src/styles/index.scss
@@ -4,6 +4,7 @@
 @import './element-ui.scss';
 @import './sidebar.scss';
 @import './btn.scss';
+@import './input.scss';
 
 body {
   height: 100%;
@@ -172,12 +173,12 @@ aside {
 }
 
 .filter-container {
-  padding-bottom: 10px;
+  padding-bottom: 6px;
 
   .filter-item {
     display: inline-block;
     vertical-align: middle;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
   }
 }
 
